Update README.md to disallow docker, prep needed packages

--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,8 @@ authors = ["Custards1 <swagyolamos@gmail.com> and contributors"]
 version = "0.1.0"
 
 [deps]
-ZipFile = "a5390f91-8eb1-5f08-bee0-b1d1ffed6cea"
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+LibSndFile = "b13ce0c6-77b0-50c6-a2db-140568b8d1a5"
 
 [compat]
 julia = "1"
