--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,9 @@ authors = ["Custards1 <swagyolamos@gmail.com> and contributors"]
 version = "0.1.0"
 
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 LibSndFile = "b13ce0c6-77b0-50c6-a2db-140568b8d1a5"
 ZipFile = "a5390f91-8eb1-5f08-bee0-b1d1ffed6cea"
