--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ LibSndFile = "b13ce0c6-77b0-50c6-a2db-140568b8d1a5"
 ZipFile = "a5390f91-8eb1-5f08-bee0-b1d1ffed6cea"
 
 [compat]
+CSV = "0.10"
 julia = "1"
 
 [extras]
